// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser > matches the program snapshot for a typed program 1`] = `
{
  "body": [
    {
      "declarations": [
        {
          "annotation": {
            "kind": "type-name",
            "name": "number",
            "position": {
              "column": 14,
              "line": 2,
              "offset": 23,
            },
            "typeArguments": [],
          },
          "name": "total",
          "position": {
            "column": 7,
            "line": 2,
            "offset": 16,
          },
        },
      ],
      "kind": "local-statement",
      "position": {
        "column": 1,
        "line": 2,
        "offset": 10,
      },
      "values": [
        {
          "kind": "number-literal",
          "position": {
            "column": 23,
            "line": 2,
            "offset": 32,
          },
          "raw": "0",
          "value": 0,
        },
      ],
    },
    {
      "body": [
        {
          "kind": "assignment-statement",
          "operator": "+=",
          "position": {
            "column": 5,
            "line": 4,
            "offset": 59,
          },
          "targets": [
            {
              "kind": "identifier",
              "name": "total",
              "position": {
                "column": 5,
                "line": 4,
                "offset": 59,
              },
            },
          ],
          "values": [
            {
              "kind": "identifier",
              "name": "index",
              "position": {
                "column": 14,
                "line": 4,
                "offset": 68,
              },
            },
          ],
        },
      ],
      "kind": "numeric-for-statement",
      "limit": {
        "kind": "number-literal",
        "position": {
          "column": 16,
          "line": 3,
          "offset": 49,
        },
        "raw": "10",
        "value": 10,
      },
      "position": {
        "column": 1,
        "line": 3,
        "offset": 34,
      },
      "start": {
        "kind": "number-literal",
        "position": {
          "column": 13,
          "line": 3,
          "offset": 46,
        },
        "raw": "1",
        "value": 1,
      },
      "step": null,
      "variable": {
        "annotation": null,
        "name": "index",
        "position": {
          "column": 5,
          "line": 3,
          "offset": 38,
        },
      },
    },
  ],
  "kind": "program",
  "position": {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
}
`;

exports[`parser > parses a function declaration with parameter and return annotations 1`] = `
{
  "body": [
    {
      "kind": "return-statement",
      "position": {
        "column": 5,
        "line": 2,
        "offset": 55,
      },
      "values": [
        {
          "kind": "identifier",
          "name": "name",
          "position": {
            "column": 12,
            "line": 2,
            "offset": 62,
          },
        },
      ],
    },
  ],
  "isExported": false,
  "isLocal": false,
  "isMethod": false,
  "kind": "function-declaration",
  "name": {
    "kind": "identifier",
    "name": "greet",
    "position": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
  },
  "parameters": [
    {
      "annotation": {
        "kind": "type-name",
        "name": "string",
        "position": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "typeArguments": [],
      },
      "isVararg": false,
      "name": "name",
      "position": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    {
      "annotation": {
        "element": {
          "kind": "type-name",
          "name": "string",
          "position": {
            "column": 35,
            "line": 1,
            "offset": 34,
          },
          "typeArguments": [],
        },
        "kind": "type-optional",
        "position": {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
      },
      "isVararg": false,
      "name": "tag",
      "position": {
        "column": 30,
        "line": 1,
        "offset": 29,
      },
    },
  ],
  "position": {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "returnAnnotation": {
    "kind": "type-name",
    "name": "string",
    "position": {
      "column": 45,
      "line": 1,
      "offset": 44,
    },
    "typeArguments": [],
  },
}
`;

exports[`parser > parses a local declaration with a type annotation 1`] = `
[
  {
    "declarations": [
      {
        "annotation": {
          "kind": "type-name",
          "name": "string",
          "position": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "typeArguments": [],
        },
        "name": "name",
        "position": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
    ],
    "kind": "local-statement",
    "position": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "values": [
      {
        "kind": "string-literal",
        "position": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "value": "Thigas",
      },
    ],
  },
]
`;

exports[`parser > parses function type annotations 1`] = `
[
  {
    "declarations": [
      {
        "annotation": {
          "isVariadic": false,
          "kind": "type-function",
          "parameters": [
            {
              "kind": "type-name",
              "name": "string",
              "position": {
                "column": 26,
                "line": 1,
                "offset": 25,
              },
              "typeArguments": [],
            },
          ],
          "position": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "returnType": {
            "kind": "type-name",
            "name": "void",
            "position": {
              "column": 35,
              "line": 1,
              "offset": 34,
            },
            "typeArguments": [],
          },
        },
        "name": "callback",
        "position": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
    ],
    "kind": "local-statement",
    "position": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "values": [
      {
        "kind": "identifier",
        "name": "print",
        "position": {
          "column": 42,
          "line": 1,
          "offset": 41,
        },
      },
    ],
  },
]
`;

exports[`parser > parses table constructors with positional, named, and computed fields 1`] = `
{
  "fields": [
    {
      "key": null,
      "name": null,
      "position": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "value": {
        "kind": "number-literal",
        "position": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "raw": "1",
        "value": 1,
      },
    },
    {
      "key": null,
      "name": "name",
      "position": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "value": {
        "kind": "string-literal",
        "position": {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "value": "x",
      },
    },
    {
      "key": {
        "kind": "number-literal",
        "position": {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "raw": "2",
        "value": 2,
      },
      "name": null,
      "position": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "value": {
        "kind": "string-literal",
        "position": {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "value": "y",
      },
    },
  ],
  "kind": "table-expression",
  "position": {
    "column": 11,
    "line": 1,
    "offset": 10,
  },
}
`;

exports[`parser > parses type aliases with generic parameters 1`] = `
[
  {
    "annotation": {
      "kind": "type-union",
      "options": [
        {
          "kind": "type-name",
          "name": "T",
          "position": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "typeArguments": [],
        },
        {
          "kind": "type-name",
          "name": "string",
          "position": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "typeArguments": [],
        },
      ],
      "position": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
    },
    "kind": "type-alias-statement",
    "name": "Result",
    "position": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "typeParameters": [
      "T",
    ],
  },
]
`;
